Fix small layout issue with token amounts
Wasn't enough space for longer amounts

--- a/app/styles/components/_reimbursement-list.scss
+++ b/app/styles/components/_reimbursement-list.scss
@@ -3,7 +3,7 @@ ul.reimbursement-list {
 
   > li {
     display: grid;
-    grid-template-columns: auto 10rem;
+    grid-template-columns: auto 12rem;
     grid-row-gap: 0.5rem;
     padding-top: 1.6rem;
 
